2009-12-11  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler.

        Negative values for animation-delay are ignored (treated as zero)
        https://bugs.webkit.org/show_bug.cgi?id=26150

        When we get the m_startTime for an animation or transition, subtract any negative
        delay so the animation/transition behaves like it started in the past, per spec.

        Tests: animations/negative-delay.html
               transitions/negative-delay.html

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::updateStateMachine):

Canonical link: https://commits.webkit.org/43443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52018 268f45cc-cd09-0410-ab3c-d52691b4dbfc